# myblas

./: README.md
HPCAA-CUDA/: README.md
HPCAA-CUDA/dense-matrix-mult/: CMakeLists.txt
HPCAA-CUDA/dense-matrix-mult/binding/: interface.cpp  runner.py
HPCAA-CUDA/dense-matrix-mult/src/: driver.cu  main.cu  util.hpp
HPCAA-CUDA/dense-matrix-mult/src/kernels/: parallel.cu
HPCAA-CUDA/sparse-matvec/: CMakeLists.txt
HPCAA-CUDA/sparse-matvec/src/: helper.cpp  helper.h  util.cpp
HPCAA-CUDA/sparse-matvec/src/solvers/heat_transfer/: ht_band.cu  ht_cusparse.cu  ht_ellpack.cu
HPCAA-CUDA/sparse-matvec/src/solvers/kernels/: kernels.cu
HPCAA-CUDA/sparse-matvec/tests/: gpu_tests.cu  host_tests.cpp  test_aux.cpp
dense_linear_algebra/: CMakeLists.txt
dense_linear_algebra/example/: block_gauss_elimination.c  dot_product.c  lu_decomp.c  matrix_mult.c
dense_linear_algebra/include/: buffer.h  matrix.h  matrix_operations.h  vector.h
dense_linear_algebra/src/: vector.c
solving_LSE/: CMakeLists.txt
solving_LSE/examples/: CG_parallel.c  CG_serial_solution.c  SOR_serial.c  jacobi_parallel.cpp
solving_LSE/include/: vector.h
solving_LSE/src/: matrix.c  matrix_operations.c  vector.c
sparse_linear_algebra/: CMakeLists.txt
sparse_linear_algebra/example/: sparse_matrix_mult.c
sparse_linear_algebra/include/: buffer.h  coordinate_form.h  csr_extraction_format.h  csr_format.h  matrix.h  vector.h
sparse_linear_algebra/src/: coordinate_form.c  csr_extraction_format.c  csr_format.c  matrix.c  vector.c
